// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`должен правильно формировать ссылки на выдачу для б/у оффера 1`] = `
<div>
  <Link
    className="SaleSearchPositions__item"
    target="_blank"
    url="link/listing/?category=cars&mark=FORD&model=ECOSPORT&super_gen=20104320&has_image=true&section=used&geo_radius=200&geo_id=213&sort=fresh_relevance_1-desc"
  >
    100 в поиске
  </Link>
  <Link
    className="SaleSearchPositions__item"
    target="_blank"
    url="link/listing/?category=cars&mark=FORD&model=ECOSPORT&super_gen=20104320&has_image=true&section=used&geo_radius=200&geo_id=213&sort=price-asc"
  >
    5 по цене 
  </Link>
  <span
    className="SaleSearchPositions__item"
  >
    из 188 шт.
  </span>
</div>
`;

exports[`должен правильно формировать ссылки на выдачу для нового оффера 1`] = `
<div>
  <Link
    className="SaleSearchPositions__item"
    target="_blank"
    url="link/card-group/?category=cars&mark=TOYOTA&model=RAV_4&section=new&configuration_id=20692875&super_gen=20692838&with_discount=true&custom_state_key=CLEARED&geo_radius=200&geo_id=213&sort=fresh_relevance_1-desc"
  >
    100 в группе
  </Link>
  <Link
    className="SaleSearchPositions__item"
    target="_blank"
    url="link/card-group/?category=cars&mark=TOYOTA&model=RAV_4&section=new&configuration_id=20692875&super_gen=20692838&with_discount=true&custom_state_key=CLEARED&geo_radius=200&geo_id=213&sort=price-asc"
  >
    5 по цене 
  </Link>
  <span
    className="SaleSearchPositions__item"
  >
    из 188 шт.
  </span>
</div>
`;
